# MQProxy

./: .gitignore  CMakeLists.txt  README.md  backup.bat  build.bat  build_release.bat  config.example.toml  config.toml  install_dependencies.bat
3d-partys/nlohmann/: readme.txt
include/: Config.h  KafkaConsumer.h  Logger.h
src/: Config.cpp  KafkaConsumer.cpp  Logger.cpp  main.cpp
